# eth-btc

./: .env.example  .gitignore  Cargo.toml  README.md  config.toml.example  gothrough.md  review.md
.cargo/: config.toml
.github/workflows/: ci.yml
benches/: backtest_bench.rs
docs/: ARCHITECTURE.md
scripts/: eth-btc-live.cron  link_fallback.c  run_live_once.sh  rustc-wrapper.sh
spec/: background.context.md  goals.objectives.md
src/: cli.rs  lib.rs  main.rs
src/account/: mod.rs
src/analysis/: mod.rs
src/backtest/: download.rs  mod.rs
src/config/: mod.rs
src/core/: mod.rs  pipeline.rs  strategy.rs
src/data/: mod.rs
src/execution/: mod.rs
src/funding/: mod.rs
src/indicators/: mod.rs
src/integration/: mod.rs
src/logging/: mod.rs
src/position/: mod.rs
src/runtime/: backfill.rs  mod.rs
src/signals/: mod.rs
src/state/: mod.rs
src/storage/: mod.rs
src/util/: http.rs  mod.rs  rate_limiter.rs
tests/: account.rs  analysis.rs  backtest.rs  cli.rs  config.rs  core.rs  data.rs  execution.rs  funding.rs  http_timeout.rs  indicators.rs  integration.rs  logging.rs  position.rs  runtime.rs  signals.rs  state.rs  storage.rs
tests/backtest/: breakdown.rs  db.rs  download.rs  engine.rs  export.rs  metrics.rs  repro.rs  sensitivity.rs
tests/config/: env_load.rs  parameters.rs
tests/core/: pipeline.rs  strategy.rs
tests/data/: fetch.rs  fetcher.rs  history.rs  price.rs
tests/execution/: close.rs  live.rs  paper.rs  repair.rs  submit.rs
tests/funding/: cost.rs  live.rs  rate.rs  zero.rs
tests/indicators/: relative.rs  sigma_floor.rs  volatility.rs  zscore.rs
tests/integration/: benchmark.rs  concurrency.rs  connectivity.rs  data_flow.rs  data_integrity.rs  deployment.rs  e2e.rs  error.rs  papertrading.rs  parity.rs  residual.rs  security.rs
tests/logging/: alert.rs  bar.rs  email.rs  format.rs  redaction.rs  rotation.rs  webhook.rs
tests/position/: risk_parity.rs  size_convert.rs
tests/signals/: entry.rs  exit.rs
tests/state/: machine.rs  persistence.rs  position.rs  recovery.rs
