[package]
name = "eth_btc_strategy"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy-primitives = { version = "1.5.2", default-features = false, features = ["std", "serde"] }
alloy-signer = { version = "1.5.2", default-features = false }
alloy-signer-local = { version = "1.5.2", default-features = false }
alloy-sol-types = "1.5.2"
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
dotenvy = "0.15"
hex = "0.4.3"
once_cell = "1.19"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rmp-serde = "1.3.1"
rusqlite = { version = "0.32", features = ["bundled"] }
rust_decimal = { version = "1.35", features = ["serde", "maths"] }
rust_decimal_macros = "1.35"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.40", features = ["full"] }
tokio-retry = "0.3"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.10", features = ["v4", "serde"] }

[dev-dependencies]
criterion = "0.5"
mockall = "0.12"
proptest = "1.5"

[[bench]]
name = "backtest_bench"
harness = false
